PROJECT (exHistogram)

SET(PROJECT_SRCS 
  main.cpp
  vtkMAFHistogram.h
  vtkMAFHistogram.cxx
)

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRCS} )

IF(MAF_BUILD_MAFDLL)
SET(PROJECT_LIBS vtkHybrid vtkIO vtkRendering vtkGraphics vtkFiltering vtkImaging vtkCommon vtkftgl vtkfreetype XercesC vtkMAF GPUAPI mafDLL)
ELSE (MAF_BUILD_MAFDLL)
SET(PROJECT_LIBS mafVME mafOperations GPUAPI)
ENDIF(MAF_BUILD_MAFDLL)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})

IF (WIN32)
  	IF(${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008" OR ${CMAKE_GENERATOR} STREQUAL "Visual Studio 8 2005" OR ${CMAKE_GENERATOR} STREQUAL "Visual Studio 10")
	  SET(NO_MANIFEST 1)
	ELSE(${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008" OR ${CMAKE_GENERATOR} STREQUAL "Visual Studio 8 2005" OR ${CMAKE_GENERATOR} STREQUAL "Visual Studio 10")
	  SET(NO_MANIFEST 0)
	ENDIF(${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008" OR ${CMAKE_GENERATOR} STREQUAL "Visual Studio 8 2005" OR ${CMAKE_GENERATOR} STREQUAL "Visual Studio 10")

ENDIF (WIN32)
