PROJECT (exInteraction)

SET(PROJECT_SRCS 
exInteractionApp.cpp
exInteractionApp.h
mafOpInteractionOp.cpp
mafOpInteractionOp.h
)

IF (WIN32)
  ADD_EXECUTABLE(${PROJECT_NAME} WIN32 ${PROJECT_SRCS} "${PROJECT_SOURCE_DIR}/app.rc")
  #CONFIGURE_FILE( "${MAF_SOURCE_DIR}/Gui/manifest.in" "${EXECUTABLE_OUTPUT_PATH}/Debug/${PROJECT_NAME}.exe.manifest" COPYONLY)
ELSE (WIN32)
  ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRCS} )
ENDIF (WIN32)

SET(PROJECT_LIBS
  mafVME mafOperations
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
IF (WIN32)
  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/MANIFEST")
ENDIF (WIN32)
